--- a/i_l1.qmd
+++ b/i_l1.qmd
@@ -1,4 +1,4 @@
-# Level 1 verbs {.unnumbered}
+# Most Common Verbs {.unnumbered}
 
 ```{r}
 #| warning: false
@@ -162,7 +162,6 @@ create_conjugation_table <- function(verb_infinitive) {
 ```
 
 ::: {.panel-tabset}
-
 
 # ser (to be)
 
@@ -476,6 +475,78 @@ create_conjugation_table("tener")
  - **retener**
    - to retain
 
+# poder (can, to be able to)
+
+Poder is a very useful verb for a beginning student. You can use it in a vast number of idiomatic expressions and everyday situations.
+
+**Poder means can in the sense of ability:** 
+
+ - No puedo ayudarle; lo siento
+   - I cannot (am unable to) help you; I’m sorry.
+
+**In the preterit tense poder has the special meaning of succeeded:** 
+
+ - Después de algunos minutos, Juan pudo abrir la puerta
+   - After a few minutes, John succeeded in opening the door.
+
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("poder")
+```
+
+## Example Phrases (and related words)
+
+ - **el poder**
+   - power
+ - **el poder absoluto**
+   - absolute power
+ - **apoderar**
+   - to empower
+ - **apoderarse de**
+   - to take possession, to take over
+ - **poderoso, poderosa**
+   - powerful
+ - **poderosamente**
+   - powerfully
+ - **el poderío**
+   - power, strength
+ - **estar en el poder**
+   - to be in power
+ - **¿Puede usted...?**
+   - Can you...?
+ - **¿Puede ayudarme?**
+   - Can you help me?
+ - **No se puede.**
+   - It can’t be done.
+ - **No puede ser.**
+   - It’s impossible. (It can’t be.)
+ - **no poder más**
+   - to be exhausted
+   
+## Dichos
+
+ - **No dejes para mañana lo que puedes hacer hoy.**
+   - Don’t put off until tomorrow what you can do today.
+ - **Sí, sí, se puede muy fácilmente.**
+   - Yes, yes, it can be done very easily.
+ - **La jaula nunca puede ser nido. (Alí Vanegas)**
+   - The cage can never be a nest.
+ - **¿Me puedo probar este vestido?**
+   - May I try on this dress?
+ - **No podemos nadar aquí. Es peligroso.**
+   - We can’t swim here. It’s dangerous.
+
+## Proverbios
+
+ - **Querer es poder.**
+   - Where there’s a will there’s a way.
+ - **Saber es poder.**
+   - Knowledge is power.
+
+
+
 # hacer (to do, to make)
 
 Hacer is an essential irregular verb for beginning students of Spanish. It is used in many everyday situations and idiomatic expressions. Hacer is especially important for weather expressions
@@ -653,69 +724,6 @@ create_conjugation_table("hacer")
 - **hace viento**
   - it’s windy
   
-
-# decir (to say, to tell)
-
-Decir is an extremely useful irregular verb. You can use decir in many everyday situations and idiomatic expressions.
-
-## Conjugation Table
-
-```{r}
-create_conjugation_table("decir")
-```
-
-## Example Phrases
-
- - **Dígame, por favor, dónde está la sala de espera.**
-   - Tell me, please, where the waiting room is located.
- - **¿Qué quiere decir esta palabra?**
-   - What does this word mean?
- - **¡Te he dicho mil veces de ponerte el cinturón de seguridad!**
-   - I’ve told you a thousand times to put on your seat belt!
-
-## Proverbios
-
- - **Dime con quién andas y te diré quién eres.**
-   - Tell me who your friends are and I will tell you who you are.
- - **Al decir las verdades se pierdan las amistades.**
-   - Friendships are lost when the truth is told.
- - **De decir a hacer hay mucho que ver.**
-   - There is a great difference between saying and doing.
-
-## Dichos
-
- - **Dicho y hecho.**
-   - No sooner said than done.
- - **querer decir**
-   - to mean
- - **un decir**
-   - a familiar saying
- - **Diga or Dígame**
-   - Hello (on the telephone)
- - **decirle al oído**
-   - to whisper in one’s ear
- - **no decir palabra**
-   - not to say a word
- - **Es decir...**
-   - That is to say...
- - **un dicho**
-   - a saying, expression
- - **dictar**
-   - to dictate
- - **el dictado**
-   - dictation
- - **el dictador**
-   - dictator
- - **decir mentiras**
-   - to tell lies
- - **decir adiós**
-   - to say good-bye
- - **bendecir**
-   - to bless
- - **maldecir**
-   - to curse, to swear
-
-
 # ir/irse (to go)
 
 Ir and irse are a very important pair of verbs for a beginning student. In the following examples, note the difference in meaning between ir and the creflexive form irse.
@@ -790,38 +798,3 @@ create_conjugation_table("irse")
    - to curse, to swear
 
 
-# ver (to see)
-
-Ver is a very useful irregular verb for beginning students. It is used in a vast number of idiomatic expressions and everyday situations. Pay special attention to the stem changes!
-
-## Conjugation Table
-
-```{r}
-create_conjugation_table("ver")
-```
-
-# poder (can, to be able to)
-
-## Conjugation Table
-
-```{r}
-create_conjugation_table("poder")
-```
-
-# querer (to want)
-
-## Conjugation Table
-
-```{r}
-create_conjugation_table("querer")
-```
-
-# venir (to come)
-
-## Conjugation Table
-
-```{r}
-create_conjugation_table("venir")
-```
-
-:::
