--- a/i_l3.qmd
+++ b/i_l3.qmd
@@ -1,23 +1,500 @@
-# Level 3 verbs {.unnumbered}
+# Cognition {.unnumbered}
 
-Moderately Used:
+```{r}
+#| warning: false
+#| message: false
+#| code-fold: true
 
-## llamar/llamarse (to call)
+library(tidyverse)
+library(gt)
 
-## andar (to walk)
+df = read_csv("https://raw.githubusercontent.com/ghidinelli/fred-jehle-spanish-verbs/master/jehle_verb_database.csv")
 
-## comprar (to buy)
+my_gt_theme <- function(gt_object, ...) {
+  
+  stopifnot("'gt_object' must be a 'gt_tbl', have you accidentally passed raw data?" = "gt_tbl" %in% class(gt_object))
+  
+  tab_out <- gt_object %>%
+    # Fonts
+    opt_table_font(
+      font = list(
+        google_font("Noto Sans"), 
+        google_font("Source Sans Pro"),
+        default_fonts()
+      )
+    ) %>%
+    
+    # Cell styles from both themes
+    tab_style(
+      style = cell_borders(
+        sides = "top", color = "white", weight = px(0)),
+      locations = cells_body(rows = ifelse(nrow(gt_object[["_data"]]) > 0, 1, NA))) %>%
+    tab_style(
+      style = cell_text(color = "#005689", size = px(22), weight = 700),
+      locations = list(cells_title(groups = "title"))) %>%
+    tab_style(
+      style = cell_text(color = "#545454", font = google_font("Source Sans Pro"), transform = "uppercase"),
+      locations = cells_column_labels(everything())) %>%
+    tab_style(
+      style = cell_text(font = google_font("Libre Franklin"), weight = 800),
+      locations = cells_title(groups = "title")) %>%
+    tab_style(
+      style = cell_text(font = google_font("Source Sans Pro"), weight = 400),
+      locations = cells_body()) %>%
+    
+    # Table options combining elements of both themes
+    tab_options(
+      # Table-wide settings
+      table.background.color = "white",
+      table.font.size = 16,
+      
+      # Table border settings
+      table.border.top.style = "none",
+      table.border.top.width = px(1),
+      table.border.top.color = "#40c5ff",
+      table.border.bottom.width = px(3),
+      table.border.bottom.color = "white",
+      
+      # Column label settings
+      column_labels.background.color = "#f6f6f6",
+      column_labels.font.weight = "bold",
+      column_labels.border.top.style = "none",
+      column_labels.border.bottom.style = "none",
+      column_labels.border.bottom.width = 1,
+      column_labels.border.bottom.color = "#334422",
+      
+      # Data row settings
+      row.striping.include_table_body = TRUE,
+      row.striping.background_color = "#ececec",
+      data_row.padding = px(6), # Average of both themes
+      
+      # Row group settings
+      row_group.font.weight = "800",
+      
+      # Heading settings
+      heading.align = "left",
+      heading.border.bottom.style = "none",
+      
+      # Table body border settings
+      table_body.border.top.style = "none",
+      
+      # Source notes settings
+      source_notes.font.size = 12,
+      
+    )
+  
+  return(tab_out)
+}
 
-## pensar (to think)
+create_conjugation_table <- function(verb_infinitive) {
+  
+  verb_order = c("Presente", 
+                 "Imperfecto", 
+                 "Pretérito", 
+                 "Futuro", 
+                 "Condicional", 
+                 "Presente perfecto",
+                 "Pluscuamperfecto",
+                 "Pretérito anterior",
+                 "Futuro perfecto",
+                 "Condicional perfecto")
+  
+  verb_df <- df %>%
+    filter(infinitive == verb_infinitive)
+  
+  infinitive = verb_df %>% pull(infinitive) %>% .[1] 
+  english_infinitive = verb_df %>% pull(infinitive_english) %>% .[1] %>% str_to_title
+  gerund = verb_df %>% pull(gerund) %>% .[1] 
+  past_participle = verb_df %>% pull(pastparticiple) %>% .[1] 
+  
+  verb_table <- verb_df %>%
+    select(-c(tense_english, 
+              infinitive, 
+              infinitive_english, 
+              verb_english,
+              # mood, 
+              mood_english,
+              gerund, 
+              gerund_english, 
+              pastparticiple, 
+              pastparticiple_english
+              )) %>%
+    mutate(
+      temp_form_2p = form_2p,
+      form_2p = ifelse(mood %in% c("Imperativo Afirmativo","Imperativo Negativo"), form_3s, form_2p),
+      form_3s = ifelse(mood %in% c("Imperativo Afirmativo","Imperativo Negativo"), temp_form_2p, form_3s),
+      form_1p = ifelse(is.na(form_1p), paste0(form_3s, "mos"), form_1p),
+      form_1s = ifelse(is.na(form_1s), " - ", form_1s)
+    ) %>%
+    select(-temp_form_2p) %>% 
+    mutate(tense = factor(tense, levels = verb_order)) %>% 
+    arrange(tense) %>% 
+    group_by(mood) %>% 
+    gt() %>%
+    tab_header(
+      title = paste("Conjugation of",infinitive),
+      subtitle = md(glue::glue(sprintf("English: *{english_infinitive}*\n
+                                     Gerundio: *{gerund}*\n
+                                     Pasado Participio: *{past_participle}*")))) %>%
+    cols_label(
+      tense = "Tense",
+      # verb_english = "English",
+      form_1s = "Yo",
+      form_2s = "Tú",
+      form_3s = "Él/Ella/Usted",
+      form_1p = "Nosotros",
+      form_2p = "Vosotros",
+      form_3p = "Ellos/Ellas/Ustedes"
+    ) %>% 
+    cols_align(
+      align = c("right"),
+      columns = everything()
+    ) %>% 
+    cols_align(
+      align = c("left"),
+      columns = tense
+    ) %>% 
+    my_gt_theme()
 
-## dormir (to sleep)
+  return(verb_table)
+}
 
-## conocer (to know)
+```
 
-## oír (to hear)
+::: {.panel-tabset}
 
-## llevar (to carry, to wear)
+#pensar
 
-## acabar (to finish)
+We think that pensar is a very useful verb for you to learn. It is used in a great number of idiomatic expressions and everyday situations. Pay attention to the stem change in Tenses 1 and 6 and in the imperative mood.
 
-## tomar (to take, to drink)
+Pensar is used with the preposition de when you ask someone what he/she thinks of someone or something, i.e., when you ask for someone’s opinion: 
+
+ - ¿Qué piensa Ud. de este libro?
+   - What do you think of this book? 
+ - Pienso que es bueno
+   - I think that it is good. 
+   
+Pensar is used with the preposition en when you ask someone what or whom he/she is thinking about:
+
+  - Miguel, no hablas mucho; ¿en qué piensas?
+    - Michael, you are not talking much; what are you thinking of? (of what are you thinking?); 
+  - Pienso en las vacaciones de verano
+    - I’m thinking of summer vacation.
+
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("pensar")
+```
+
+
+## Example Phrases
+
+- **¿Qué piensa Ud. de eso?**
+  - What do you think of that?
+- **¿En qué piensa Ud.?**
+  - What are you thinking of?
+- **Pensamos comprar una casa.**
+  - We intend to buy a house.
+
+## Proverbios
+
+- **Antes de hablar es bueno pensar.**
+  - (It’s good to) think before you speak.
+
+## Dichos
+
+- **pensativo, pensativa**
+  - thoughtful, pensive
+- **un pensador, una pensadora**
+  - a thinker
+- **pensar + inf.**
+  - to intend + inf.
+- **pensar en**
+  - to think of, about
+- **sin pensar**
+  - thoughtlessly
+- **repensar**
+  - to think over (again)
+- **pensante**
+  - thinking
+- **pensativamente**
+  - thoughtfully
+- **el pensamiento**
+  - thought
+- **estar absorto en sus pensamientos**
+  - to be deep in thought
+
+
+#esperar
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("esperar")
+```
+
+
+## Example Phrases
+
+- **Mientras hay vida hay esperanza.**
+  - When there is life, there is hope.
+- **la esperanza**
+  - hope
+- **No hay esperanza.**
+  - There is no hope.
+- **Espere, por favor.**
+  - Please wait.
+- **dar esperanzas**
+  - to give encouragement
+- **desesperar**
+  - to despair
+- **la espera**
+  - wait, waiting
+- **la sala de espera**
+  - waiting room
+
+
+#creer
+
+We believe that creer is a useful verb for you to learn because it has an important stem change in Tenses 3 and 7. This verb is helpful in a great number of everyday expressions and situations.
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("creer")
+```
+
+
+## Example Phrases
+
+- **Hasta que no lo veas, no lo creas.**
+  - Don’t believe it until you see it.
+- **Ver es creer.**
+  - Seeing is believing.
+- **¡Ya lo creo!**
+  - Of course!
+- **Creo que sí.**
+  - I think so.
+- **Creo que no.**
+  - I don’t think so.
+- **No me lo creo.**
+  - I can’t believe it.
+- **Se cree buen cantante, pero yo creo que él sería mejor como mimo.**
+  - He thinks he’s a good singer, but I believe that he would be better as a mime.
+
+## Dichos
+
+- **crédulo, crédula**
+  - credulous, gullible
+- **la credulidad**
+  - credulity
+- **tener buenas creederas**
+  - to be credulous, very gullible
+- **crédulamente**
+  - credulously
+- **el credo**
+  - creed
+- **dar crédito**
+  - to believe
+- **descreer**
+  - to disbelieve
+- **incrédulo, incrédula**
+  - incredulous
+- **la incredulidad**
+  - incredulity, unbelief, disbelief
+- **increíble**
+  - incredible
+- **creíble**
+  - believable
+- **creerse**
+  - to consider, to think, to believe (oneself)
+
+
+#saber
+
+Saber is a very useful irregular verb for you to know. It is used in a great number of idiomatic expressions and everyday situations. Don’t confuse saber with conocer
+
+**Generally speaking,** *saber* means to know a fact, to know something thoroughly:
+
+- **¿Sabe Ud. qué hora es?**/Do you know what time it is?
+- **¿Sabe Ud. la lección?**/Do you know the lesson?
+
+When you use *saber + inf.*, it means to know how:
+
+- **¿Sabe Ud. nadar?**/Do you know how to swim?
+- **Sí, (yo) sé nadar**/Yes, I know how to swim.
+
+In the preterit tense, *saber* means to find out:
+
+- **¿Lo sabe Ud.?**/Do you know it?
+- **Sí, lo supe ayer**/Yes, I found it out yesterday.
+
+
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("saber")
+```
+
+
+## Example Phrases
+
+- **Este niño no sabe contar.**
+  - This child can’t (does not know how to) count.
+- **No sé nada de este asunto.**
+  - I don’t know anything about this matter.
+- **¿Sabe usted si hay una farmacia por aquí?**
+  - Do you know if there is a pharmacy around here?
+
+## Proverbios
+
+- **Saber es poder.**
+  - Knowledge is power.
+- **Más vale saber que haber.**
+  - Knowing is better than having. (Knowledge is worth more than possessions/things.)
+
+## Dichos
+
+- **sabio, sabia**
+  - wise, learned
+- **un sabidillo, una sabidilla**
+  - a know-it-all
+- **un sabihondo, una sabihonda**
+  - a know-it-all
+- **un sabelotodo**
+  - a know-it-all
+- **la sabiduría**
+  - knowledge, learning, wisdom
+- **Que yo sepa...**
+  - As far as I know...
+- **¡Quién sabe!**
+  - Who knows! Perhaps! Maybe!
+- **la señorita Sabelotodo**
+  - Miss Know-It-All
+- **el señor Sabelotodo**
+  - Mr. Know-It-All
+- **sabido, sabida**
+  - known
+- **el saber**
+  - knowledge
+- **saber por experiencia**
+  - to learn from experience
+- **saber algo como el avemaría**
+  - to know something like the back of one’s hand
+- **no saber ni jota**
+  - to have no idea, to not know at all
+- **sabiamente**
+  - learnedly, wisely
+
+
+
+
+#conocer
+
+Conocer is a verb that you should know! Pay special attention to the spelling change from c to zc before a or o. Conocer is useful in numerous everyday expressions and situations 
+
+Be careful when choosing between **conocer** and **saber**, which also means to know.
+
+- **(a)** Generally speaking, *conocer* means to know in the sense of being acquainted with a person, a place, or a thing:
+  - **¿Conoce Ud. a María?**  
+    Do you know Mary?
+  - **¿Conoce Ud. bien los Estados Unidos?**  
+    Do you know the United States well?
+  - **¿Conoce Ud. este libro?**  
+    Do you know this book? (Are you acquainted with this book?)
+
+In the preterit tense, *conocer* means met in the sense of first met, first became acquainted with someone:
+  - **¿Conoce Ud. a Elena?**  
+    Do you know Helen?
+  - **Sí, (yo) la conocí anoche en casa de un amigo mío.**  
+    Yes, I met her (for the first time) last night at the home of one of my friends.
+
+Generally speaking, *saber* means to know a fact, to know something thoroughly:
+  - **¿Sabe Ud. qué hora es?**  
+    Do you know what time it is?  
+    (See *saber* for further examples.)
+
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("conocer")
+```
+
+
+## Example Phrases
+
+- **El árbol se conoce por su fruta.**
+  - The tree is known by its fruit. (You will be judged by your actions; the apple doesn’t fall far from the tree.)
+- **–¿Conoce Ud. a esa mujer? –Sí, la conozco.**
+  - –Do you know that woman? –Yes, I know her.
+
+## Dichos
+
+- **un conocido, una conocida**
+  - an acquaintance
+- **conocido, conocida**
+  - known
+- **conocidamente**
+  - obviously
+- **desconocido, desconocida**
+  - unknown
+- **un desconocido, una desconocida**
+  - stranger, someone you don’t know
+- **un conocedor, una conocedora**
+  - an expert
+- **el conocimiento**
+  - knowledge
+- **el desconocimiento**
+  - ignorance
+- **poner en conocimiento de**
+  - to inform (about)
+- **muy conocido**
+  - very well-known
+- **reconocible**
+  - recognizable
+- **reconocido, reconocida**
+  - grateful
+
+
+
+::: {.callout-note}
+
+If you can conjugate *conocer*, you can also conjugate the following verbs:
+
+- **reconocer**
+  - to recognize, to admit
+- **desconocer**
+  - to be ignorant of
+  
+:::
+
+#parecer
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("parecer")
+```
+
+#suponer
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("suponer")
+```
+
+#sentir/sentirse
+
+## Conjugation Table
+
+```{r}
+create_conjugation_table("sentir")
+create_conjugation_table("sentirse")
+```
+
+:::
