--- a/i_l4.qmd
+++ b/i_l4.qmd
@@ -1,13 +1,2 @@
-# Level 4 verbs {.unnumbered}
+# Learning {.unnumbered}
 
-Less Frequently Used:
-
-mirar/mirarse (to look)
-volver (to return)
-entrar (to enter)
-contar (to tell)
-estudiar (to study)
-quedar/quedarse (to stay, to meet)
-creer (to believe)
-sentir/sentirse (to feel)
-perder (to lose)
