neatness for mobile

--- a/index.qmd
+++ b/index.qmd
@@ -176,7 +176,9 @@ editor:
 
 ::::
 
-# Test
+# Game
+
+**Spanish Verb Conjugation Game**
 
 ```{=html}
 <iframe width="780" height="500" src="https://ajaverett.shinyapps.io/spanish_quiz/" ></iframe>
